This is a new commit for what I originally planned to be amended

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://roni9843.github.io/school_form",
-  "name": "school-management",
+  "homepage": "https://roni9843.github.io/Association_Form",
+  "name": "association_form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
